@@ -3280,3 +3280,14 @@ Changes to be committed:
 	modified:   History.txt
 	modified:   ZGame/DX10/03.Init/d3dclass.cpp
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/07/29.17_29_07.67.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
